# messaging-platform-sdk

./: .gitignore  CONTRIBUTING.md  DEVELOPER-GUIDE.md  LICENSE  README.md  ROADMAP.md  USER-GUIDE.md  WEB-AGENT-GUIDE.md  build.gradle  commit-msg.txt  settings.gradle
agents/: .gitignore  GAME-DEV-INDEX.md  GETTING-STARTED-GAMES.md  INTEGRATION-COMPARISON.txt  README.md
agents/cpp-agent/: .gitignore  CMakeLists.txt  CPP-AGENT-COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  build.sh
agents/cpp-agent/docs/: API_DOCUMENTATION.md
agents/cpp-agent/examples/: CMakeLists.txt  basic_chat_example.cpp  game_integration_example.cpp  udp_example.cpp
agents/cpp-agent/include/hmdev/messaging/agent/: data_models.h  security.h
agents/cpp-agent/include/hmdev/messaging/api/: connection_channel_api.h  http_client.h  messaging_channel_api.h  udp_client.h
agents/cpp-agent/include/hmdev/messaging/util/: utils.h
agents/cpp-agent/src/: data_models.cpp  http_client.cpp  messaging_channel_api.cpp  security.cpp  udp_client.cpp  utils.cpp
agents/examples/: GAMES-README.md  README.md
agents/examples/java-agent-chat/: README.md  README_WEBRTC_EXAMPLE.md  build.gradle
agents/examples/python-agent-chat/: README.md  requirements.txt  run-chat.bat  run-chat.sh
agents/examples/web-sdk-server/: .env.example  .gitignore  QUICK-START.md  README.md  WHITEBOARD-README.md  build-and-test.bat  build.gradle  settings.gradle  start.sh  verify-references.sh
agents/examples/web-sdk-server/src/main/resources/: application.properties
agents/java-agent/: build.gradle  run-webrtc-example.cmd  run-webrtc-example.sh
agents/java-agent/docs/archive/: DEBUG_MODE.md  ICE_SERVER_CONFIGURED.md  ICE_TURN_CONFIG.md  README.md  WEBRTC_INTEGRATION_COMPLETE.md  WEBRTC_JAVA_INTEGRATION.md
agents/java-agent/src/main/resources/: logback.xml  webrtc.properties
agents/python-agent/: requirements.txt  setup.py
agents/python-agent/hmdev/: __init__.py  chat_example.py
agents/python-agent/hmdev/messaging/: __init__.py
agents/python-agent/hmdev/messaging/agent/: __init__.py  agent.py
agents/python-agent/hmdev/messaging/agent/api/: connection_channel_api.py  connection_channel_api_factory.py  models.py
agents/python-agent/hmdev/messaging/agent/core/: agent_connection.py  agent_connection_event_handler.py  local_tcp_server.py
agents/python-agent/hmdev/messaging/agent/security/: aes_ctr.py  my_security.py  pem_io.py
agents/python-agent/hmdev/messaging/agent/util/: api_result.py  env_loader.py  http_client.py  password_utils.py  session_recovery_utility.py  (+1 more)
agents/selenium-tests/: conftest.py  requirements.txt  utils.py
agents/selenium-tests/tests/: test_java_agent_connect.py  test_web_agent_connect.py
agents/web-agent-js/: .gitignore  CHANGELOG.md  README.md  build.gradle  file-structure.html  index.html  package.json
agents/web-agent-js/js/: web-agent.js  web-agent.libs.js  web-agent.webrtc.js
messaging-common/: LOGUTILS-README.md  build.gradle
scripts/: consolidate-docs.sh
(+154 files in other folders)
